# ChangeLog for dev-haskell/cabal
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cabal/ChangeLog,v 1.35 2007/10/31 12:54:22 dcoutts Exp $

  31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> cabal-1.1.3-r1.ebuild,
  cabal-1.1.4.ebuild, cabal-1.1.6.1.ebuild, cabal-1.1.6.2.ebuild:
  Drop virtual/ghc in favour of dev-lang/ghc

  29 Aug 2007; Jeroen Roovers <jer@gentoo.org> cabal-1.1.6.2.ebuild:
  Stable for HPPA too.

  11 Aug 2007; Steve Dibb <beandog@gentoo.org> cabal-1.1.6.2.ebuild:
  amd64 stable

  11 Aug 2007; Steve Dibb <beandog@gentoo.org> cabal-1.1.6.1.ebuild:
  amd64 stable

  02 Aug 2007; Christian Faulhammer <opfer@gentoo.org> cabal-1.1.6.2.ebuild:
  stable x86, bug 186849

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> cabal-1.1.6.2.ebuild:
  Stable on ppc64; bug #186849

  30 Jul 2007; Ferris McCormick <fmccor@gentoo.org> cabal-1.1.6.2.ebuild:
  Sparc stable, required for Bug #186849 --- passes all tests and installs as
  expected.

  28 Jul 2007; nixnut <nixnut@gentoo.org> cabal-1.1.6.2.ebuild:
  Stable on ppc wrt bug 186849

*cabal-1.1.6.2 (08 Jul 2007)

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +cabal-1.1.6.2.ebuild:
  New cabal version that comes with ghc-6.6.1.

  29 Apr 2007; Lennart Kolmodin <kolmodin@gentoo.org> cabal-1.1.3-r1.ebuild,
  cabal-1.1.4.ebuild:
  Change evil (borked) deps so that the packages actually can be installed.

*cabal-1.1.6.1 (07 Mar 2007)

  07 Mar 2007; <kolmodin@gentoo.org> +cabal-1.1.6.1.ebuild:
  Bump version, it's a dependency of dev-lang/ghc-6.6.

  12 Oct 2006; Duncan Coutts <dcoutts@gentoo.org> -cabal-1.1.3.ebuild,
  cabal-1.1.3-r1.ebuild, cabal-1.1.4.ebuild:
  Remove old revision and make current ones block on ghc-6.6 (version 1.1.6
  will be compatible with ghc-6.6)

  28 Aug 2006; Jeroen Roovers <jer@gentoo.org> cabal-1.1.4.ebuild:
  Stable for HPPA (bug #140369).

  21 Aug 2006; Daniel Gryniewicz <dang@gentoo.org> cabal-1.1.4.ebuild: