@@ -1,4 +1,4 @@
 DIST cabal-1.1.6.2.tar.gz 549071 RMD160 de6ba431220670736e4fa2e407e59b60b83cddba SHA1 29f18107c25cab3ca6bde3c551b3b7bbcad4be9d SHA256 9c687e4ca1a15958a7fe1caabc3c6d7d8e361e37cc37bbf7c8c80a3e507a7b41
-EBUILD cabal-1.1.6.2.ebuild 1549 RMD160 84aef5cbeb4ce06b39c8923a49ca4d7d8ef284e5 SHA1 7de5bfd853851cc8deea09df57d91d435086ac06 SHA256 612a2b937d6499017aa1a21421c63b31f8842c94c48e5e0d1eaf282b5f7b8c80
-MISC ChangeLog 4473 RMD160 e44353dc44b1e7a6ee59dedcf42d40c58914d084 SHA1 79036eb93e99d7bb2d4e9af1a520178eef7a2077 SHA256 dbbe32523707c8f82b752c8afbcb1f31a746f40cf4074dccb8fac0ae64508ee1
+EBUILD cabal-1.1.6.2.ebuild 1261 RMD160 9295a6f1204130ed0d36f7eea55876566682a0c9 SHA1 be642a3f300523a4fd35af5faa83810223041ee0 SHA256 5a9d8ef398b2fc2a279a6703dc4875ea213b28eb1476dcb64a955cbd95cd588d
+MISC ChangeLog 4753 RMD160 aca150d421c35f8f9ad2b15a28031c51577e19c1 SHA1 0f86556194b74059517898e4dd58af93af4f1f1f SHA256 4f7d27bb516c129e5698fef8d14b61e1150476ec6fbe6c409584b1e83eca0b10
 MISC metadata.xml 231 RMD160 8b37a8901d230433c69ffa03eeed903bca89249b SHA1 b77d396c72fd66ec7c09ae8de996a5ba50d9e482 SHA256 b1bacb51e08eb7f067d6a30020b5c45e4f4e48b5ec4640402ecaa34b78e2ae34
