@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cabal/cabal-1.1.6.2.ebuild,v 1.9 2007/10/31 12:54:22 dcoutts Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cabal/cabal-1.1.6.2.ebuild,v 1.10 2007/12/13 00:42:07 dcoutts Exp $
 
 EAPI="prefix"
 
@@ -10,31 +10,26 @@ inherit haskell-cabal eutils
 DESCRIPTION="Haskell Common Architecture for Building Applications and Libraries"
 HOMEPAGE="http://haskell.org/cabal"
 SRC_URI="http://haskell.org/cabal/release/${P}/${P}.tar.gz"
+
 LICENSE="as-is"
 SLOT="0"
-
 KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-fbsd ~x86-macos ~x86-solaris"
-
 IUSE="doc"
 
 DEPEND=">=dev-lang/ghc-6.2"
 
-GHC_PV="6.6.1"
+CABAL_CORE_LIB_GHC_PV="6.6.1"
 
 src_unpack() {
-	if test $(ghc-version) = ${GHC_PV}; then
-	    elog "cabal-${PV} is included in ghc-${GHC_PV}, nothing to install."
-	else
-		unpack "${A}"
-		if ! $(ghc-cabal); then
-			sed -i 's/Build-Depends: base/Build-Depends: base, unix/' \
-				${S}/Cabal.cabal
-		fi
+	unpack "${A}"
+	if ! $(ghc-cabal); then
+		sed -i 's/Build-Depends: base/Build-Depends: base, unix/' \
+			"${S}/Cabal.cabal"
 	fi
 }
 
 src_compile() {
-	if ! test $(ghc-version) = ${GHC_PV}; then
+	if ! cabal-is-dummy-lib; then
 		if ghc-cabal; then
 			make setup HC="$(ghc-getghc) -ignore-package Cabal"
 		else
@@ -46,20 +41,14 @@ src_compile() {
 }
 
 src_install() {
-	if test $(ghc-version) = ${GHC_PV}; then
-		t=$(ghc-confdir)
-		dodir "${t#${EPREFIX}}"
-		echo '[]' > "${D}/$(ghc-confdir)/$(ghc-localpkgconf)"
-	else
-		cabal_src_install
+	cabal_src_install
 
-		# documentation (install directly)
+	# documentation (install directly)
+	if use doc; then
 		dohtml -r doc/users-guide
-		if use doc; then
-			dohtml -r doc/API
-			dohtml -r doc/pkg-spec-html
-			dodoc doc/pkg-spec.pdf
-		fi
-		dodoc changelog copyright README releaseNotes TODO
+		dohtml -r doc/API
+		dohtml -r doc/pkg-spec-html
+		dodoc doc/pkg-spec.pdf
 	fi
+	dodoc changelog copyright README releaseNotes TODO
 }
