@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/cabal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cabal/ChangeLog,v 1.35 2007/10/31 12:54:22 dcoutts Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cabal/ChangeLog,v 1.36 2007/12/13 00:42:07 dcoutts Exp $
+
+  12 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> cabal-1.1.4.ebuild,
+  cabal-1.1.6.1.ebuild, cabal-1.1.6.2.ebuild:
+  Various minor maintanance changes. Remove unecessary blocker.
+  Use new eclass functions to reduce code. Tidy code layout.
+  Only install user guide if USE=doc.
 
   31 Oct 2007; Duncan Coutts <dcoutts@gentoo.org> cabal-1.1.3-r1.ebuild,
   cabal-1.1.4.ebuild, cabal-1.1.6.1.ebuild, cabal-1.1.6.2.ebuild:
